Set up color variables in styles.scss

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,10 @@
     <title>todo</title>
 </head>
 <body>
-    
+    <div class="app-container">
+        <div class="navbar">
+            <h2 class="nav-logo">todo</h2>
+        </div>
+    </div>
 </body>
 </html>
