--- a/src/template.html
+++ b/src/template.html
@@ -12,6 +12,7 @@
             <h2 class="nav-logo">todo</h2>
             <button class="add-todo-btn" type="button"><svg class="add-todo-btn-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em" height="1em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="#626262"><path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/></g><rect x="0" y="0"/></svg></button>
         </div>
+        <div class="main-container">
         <div class="categories-container">
             <div class="category">
                 <span class="dot dot1"></span>
@@ -30,6 +31,10 @@
                 <p class="category-title">family</p>
             </div>
         </div>
+        <div class="todos-container">
+
+        </div>
+    </div>
     </div>
 </body>
 </html>
