Add all button to categories

--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,10 @@
         <div class="main-container">
         <div class="categories-container">
             <div class="category">
+                <span class="dot dot-all"></span>
+                <p class="category-title">all</p>
+            </div>
+            <div class="category">
                 <span class="dot dot1"></span>
                 <p class="category-title">work</p>
             </div>
