--- a/src/template.html
+++ b/src/template.html
@@ -36,6 +36,21 @@
             </div>
         </div>
         <div class="todos-container">
+            <div class="todo">
+                <div class="todo-heading">
+
+                </div>
+            </div>
+            <div class="todo">
+                <div class="todo-heading">
+                    
+                </div>
+            </div>
+            <div class="todo">
+                <div class="todo-heading">
+                    
+                </div>
+            </div>
 
         </div>
     </div>
