--- a/src/template.html
+++ b/src/template.html
@@ -37,17 +37,29 @@
         </div>
         <div class="todos-container">
             <div class="todo">
-                <div class="todo-heading">
+                <div class="todo-content">
+                    <div class="todo-heading">
+                        <h3 class="todo-title">Titlehtrhr</h3>
+                        <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
 
                 </div>
             </div>
             <div class="todo">
-                <div class="todo-heading">
+                <div class="todo-content">
+                    <div class="todo-heading">
+                        <h3 class="todo-title">Lorem ipsum dolor s</h3>
+                        <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
                     
                 </div>
             </div>
             <div class="todo">
-                <div class="todo-heading">
+                <div class="todo-content">
+                    <div class="todo-heading">
+                        <h3 class="todo-title">Title</h3>
+                        <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
                     
                 </div>
             </div>
