Complete styling for todo description

--- a/src/template.html
+++ b/src/template.html
@@ -42,6 +42,10 @@
                         <h3 class="todo-title">Titlehtrhr</h3>
                         <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
                     </div>
+                    <div class="todo-description">
+                        <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    </div>
 
                 </div>
             </div>
@@ -51,6 +55,10 @@
                         <h3 class="todo-title">Lorem ipsum dolor s</h3>
                         <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
                     </div>
+                    <div class="todo-description">
+                        <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae blanditiis animi eos cupiditate! Soluta repellendus quae, facere at expedita molestias?</p>
+
+                    </div>
                     
                 </div>
             </div>
@@ -59,6 +67,10 @@
                     <div class="todo-heading">
                         <h3 class="todo-title">Title</h3>
                         <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
+                    <div class="todo-description">
+                        <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae blanditiis animi eos cupiditate! Soluta repellendus quae, facere at expedita molestias?</p>
+
                     </div>
                     
                 </div>
