--- a/src/template.html
+++ b/src/template.html
@@ -46,6 +46,9 @@
                         <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
                     </div>
+                    <div class="todo-footer">
+                        <span class="dot dot1"></span>
+                    </div>
 
                 </div>
             </div>
@@ -59,6 +62,9 @@
                         <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae blanditiis animi eos cupiditate! Soluta repellendus quae, facere at expedita molestias?</p>
 
                     </div>
+                    <div class="todo-footer">
+                        <span class="dot dot3"></span>
+                    </div>
                     
                 </div>
             </div>
@@ -71,6 +77,9 @@
                     <div class="todo-description">
                         <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae blanditiis animi eos cupiditate! Soluta repellendus quae, facere at expedita molestias?</p>
 
+                    </div>
+                    <div class="todo-footer">
+                        <span class="dot dot1"></span>
                     </div>
                     
                 </div>
