Fix categories so both color and text is clickable

--- a/src/template.html
+++ b/src/template.html
@@ -15,24 +15,35 @@
         <div class="main-container">
         <div class="categories-container">
             <div class="category">
+                <button type="button" class="category-btn">
                 <span class="dot dot-all"></span>
+                
                 <p class="category-title">all</p>
+            </button>
             </div>
             <div class="category">
+                <button type="button" class="category-btn">
                 <span class="dot dot1"></span>
                 <p class="category-title">work</p>
+            </button>
             </div>
             <div class="category">
+                <button type="button" class="category-btn">
                 <span class="dot dot2"></span>
                 <p class="category-title">study</p>
+            </button>
             </div>
             <div class="category">
+                <button type="button" class="category-btn">
                 <span class="dot dot3"></span>
                 <p class="category-title">entertainment</p>
+            </button>
             </div>
             <div class="category">
-                <span class="dot dot4"></span>
-                <p class="category-title">family</p>
+                <button type="button" class="category-btn">
+                    <span class="dot dot4"></span>
+                    <p class="category-title">family</p>
+                </button>
             </div>
         </div>
         <div class="todos-container">
