--- a/src/template.html
+++ b/src/template.html
@@ -60,6 +60,7 @@
                     <div class="todo-footer">
                         <span class="dot dot1"></span>
                         <label class="control control-checkbox">
+                            done
                             <input type="checkbox"/>
                         <div class="control_indicator"></div>
                     </label>
@@ -82,6 +83,7 @@
                         <span class="dot dot3"></span>
                         <div class="control-group">
                             <label class="control control-checkbox">
+                                done
                                     <input type="checkbox"/>
                                 <div class="control_indicator"></div>
                             </label>
@@ -103,6 +105,7 @@
                     <div class="todo-footer">
                         <span class="dot dot1"></span>
                         <label class="control control-checkbox">
+                            done
                             <input type="checkbox"/>
                         <div class="control_indicator"></div>
                     </label>
