Add arrows to horizontal scroll for categories for mobile devices

--- a/src/template.html
+++ b/src/template.html
@@ -45,6 +45,8 @@
                     <p class="category-title">family</p>
                 </button>
             </div>
+            <button class="left-arrow-btn arrow-btn"type="button"><svg class="left-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></button>
+            <button class="right-arrow-btn arrow-btn"type="button"><svg class="right-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></button>
         </div>
         <div class="todos-container">
             <div class="todo">
