--- a/src/template.html
+++ b/src/template.html
@@ -45,6 +45,18 @@
                     <p class="category-title">family</p>
                 </button>
             </div>
+            <div class="option">
+                <button type="button" class="options-btn">
+                    <svg class="options-svg" xmlns="http://www.w3.org/2000/svg"><path d="M18.363 8.464l1.433 1.431-12.67 12.669-7.125 1.436 1.439-7.127 12.665-12.668 1.431 1.431-12.255 12.224-.726 3.584 3.584-.723 12.224-12.257zm-.056-8.464l-2.815 2.817 5.691 5.692 2.817-2.821-5.693-5.688zm-12.318 18.718l11.313-11.316-.705-.707-11.313 11.314.705.709z"/></svg>
+                    <p class="options-title">Edit Categories</p>
+                </button>
+            </div>
+            <div class="option">
+                <button type="button" class="options-btn">
+                    <svg class="options-svg"  xmlns="http://www.w3.org/2000/svg"><path class="options-svg"  d="M19 24h-14c-1.104 0-2-.896-2-2v-16h18v16c0 1.104-.896 2-2 2m-9-14c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6 0c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6-5h-20v-2h6v-1.5c0-.827.673-1.5 1.5-1.5h5c.825 0 1.5.671 1.5 1.5v1.5h6v2zm-12-2h4v-1h-4v1z"/></svg>
+                    <p class="options-title">Delete Done</p>
+                </button>
+            </div>
             <button class="left-arrow-btn arrow-btn"type="button"><svg class="left-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></button>
             <button class="right-arrow-btn arrow-btn"type="button"><svg class="right-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></button>
         </div>
