--- a/src/template.html
+++ b/src/template.html
@@ -84,6 +84,10 @@
                     </div>
 
                 </div>
+                <div class="todo-options">
+                    <button type="button" class="todo-options-btn todo-edit-btn">Edit...</button>
+                    <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
+                </div>
             </div>
             <div class="todo">
                 <div class="todo-content">
