Add add new todo pop-up box with styling for buttons

--- a/src/template.html
+++ b/src/template.html
@@ -146,6 +146,15 @@
             </div>
         </div>
     </div>
+    <div class="add-new-todo-container">
+        <div class="add-new-todo-box">
+            <div class="add-new-todo-buttons-container">
+                <button type="button" class="add-new-todo-buttons cancel-add-new-todo-button">Cancel</button>
+                <button type="button" class="add-new-todo-buttons add-add-new-todo-button">Add</button>
+            </div>
+
+        </div>
+    </div>
     </div>
 </body>
 </html>
