--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
     <div class="app-container">
         <div class="navbar">
             <h2 class="nav-logo">todo</h2>
-            <button class="add-todo-btn" type="button"><svg class="add-todo-btn-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="#626262"><path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/></g><rect x="0" y="0"/></svg></button>
+            <button class="add-todo-btn" type="button"><svg class="add-todo-btn-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="#626262"><path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/></g></svg></button>
         </div>
         <div class="main-container">
         <div class="categories-container">
@@ -18,49 +18,53 @@
                 <button type="button" class="category-btn">
                 <span class="dot dot-all"></span>
                 
-                <p class="category-title">all</p>
+                <span class="category-title">all</span>
             </button>
             </div>
             <div class="category">
                 <button type="button" class="category-btn">
                 <span class="dot dot1"></span>
-                <p class="category-title">work</p>
+                <span class="category-title">work</span>
             </button>
             </div>
             <div class="category">
                 <button type="button" class="category-btn">
                 <span class="dot dot2"></span>
-                <p class="category-title">study</p>
+                <span class="category-title">study</span>
             </button>
             </div>
             <div class="category">
                 <button type="button" class="category-btn">
                 <span class="dot dot3"></span>
-                <p class="category-title">entertainment</p>
+                <span class="category-title">entertainment</span>
             </button>
             </div>
             <div class="category">
                 <button type="button" class="category-btn">
                     <span class="dot dot4"></span>
-                    <p class="category-title">family</p>
+                    <span class="category-title">family</span>
                 </button>
             </div>
             <div class="options">
             <div class="option">
                 <button type="button" class="options-btn">
                     <svg class="options-svg" xmlns="http://www.w3.org/2000/svg"><path d="M18.363 8.464l1.433 1.431-12.67 12.669-7.125 1.436 1.439-7.127 12.665-12.668 1.431 1.431-12.255 12.224-.726 3.584 3.584-.723 12.224-12.257zm-.056-8.464l-2.815 2.817 5.691 5.692 2.817-2.821-5.693-5.688zm-12.318 18.718l11.313-11.316-.705-.707-11.313 11.314.705.709z"/></svg>
-                    <p class="options-title">Edit Categories</p>
+                    <span class="options-title">Edit Categories</span>
                 </button>
             </div>
             <div class="option">
                 <button type="button" class="options-btn">
                     <svg class="options-svg"  xmlns="http://www.w3.org/2000/svg"><path class="options-svg"  d="M19 24h-14c-1.104 0-2-.896-2-2v-16h18v16c0 1.104-.896 2-2 2m-9-14c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6 0c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6-5h-20v-2h6v-1.5c0-.827.673-1.5 1.5-1.5h5c.825 0 1.5.671 1.5 1.5v1.5h6v2zm-12-2h4v-1h-4v1z"/></svg>
-                    <p class="options-title">Delete Done</p>
+                    <span class="options-title">Delete Done</span>
                 </button>
             </div>
         </div>
-            <button class="left-arrow-btn arrow-btn"type="button"><svg class="left-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></button>
-            <button class="right-arrow-btn arrow-btn"type="button"><svg class="right-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg></button>
+            <button class="left-arrow-btn arrow-btn" type="button">
+                <svg class="left-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
+            </button>
+            <button class="right-arrow-btn arrow-btn" type="button">
+                <svg class="right-arrow arrow" xmlns="http://www.w3.org/2000/svg"><path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"/></svg>
+            </button>
         </div>
         <div class="todos-container">
             <div class="todo">
@@ -78,7 +82,7 @@
                         <label class="control control-checkbox">
                             done
                             <input type="checkbox"/>
-                        <div class="control_indicator"></div>
+                        <span class="control_indicator"></span>
                     </label>
                         
                     </div>
@@ -105,7 +109,7 @@
                             <label class="control control-checkbox">
                                 done
                                     <input type="checkbox"/>
-                                <div class="control_indicator"></div>
+                                <span class="control_indicator"></span>
                             </label>
                         </div>
                     </div>
@@ -132,7 +136,7 @@
                             <label class="control control-checkbox">
                                 done
                                     <input type="checkbox"/>
-                                <div class="control_indicator"></div>
+                                <span class="control_indicator"></span>
                             </label>
                         </div>
                     </div>
@@ -152,7 +156,10 @@
                 <button type="button" class="add-new-todo-buttons cancel-add-new-todo-button">Cancel</button>
                 <button type="button" class="add-new-todo-buttons add-add-new-todo-button">Add</button>
             </div>
-
+            <label class="todo-input-label" for="add-todo-title">Title</label>
+            <input class="todo-input" id="add-todo-title" type="text" placeholder="add a title...">
+            <label class="todo-input-label" for="add-todo-description">Description</label>
+            <textarea class="todo-input" id="add-todo-description" placeholder="add a description..."></textarea>
         </div>
     </div>
     </div>
