Restyle categories select for add todo form

--- a/src/template.html
+++ b/src/template.html
@@ -161,6 +161,32 @@
             <label class="todo-input-label" for="add-todo-description">Description</label>
             <textarea class="todo-input" id="add-todo-description" placeholder="add a description..."></textarea>
             <label class="todo-input-label" for="add-todo-category">Category</label>
+            <div class="add-todo-categories">
+            <div class="category-option">
+                <button type="button" class="category-btn">
+                <span class="dot dot1"></span>
+                <span class="category-title">work</span>
+            </button>
+            </div>
+            <div class="category-option">
+                <button type="button" class="category-btn">
+                <span class="dot dot2"></span>
+                <span class="category-title">study</span>
+            </button>
+            </div>
+            <div class="category-option">
+                <button type="button" class="category-btn">
+                <span class="dot dot3"></span>
+                <span class="category-title">entertainment</span>
+            </button>
+            </div>
+            <div class="category-option">
+                <button type="button" class="category-btn">
+                    <span class="dot dot4"></span>
+                    <span class="category-title">family</span>
+                </button>
+            </div>
+        </div>
         </div>
     </div>
     </div>
