Complete styling for edit todos pop up

--- a/src/template.html
+++ b/src/template.html
@@ -189,6 +189,18 @@
         </div>
         </div>
     </div>
+    <div class="edit-existing-todo-container">
+        <div class="edit-existing-todo-box">
+            <div class="edit-existing-todo-buttons-container">
+                <button type="button" class="edit-existing-todo-buttons cancel-edit-existing-todo-button">Cancel</button>
+                <button type="button" class="edit-existing-todo-buttons add-edit-existing-todo-button">Edit</button>
+            </div>
+            <label class="todo-input-label" for="edit-todo-title">Title</label>
+            <input class="todo-input" id="edit-todo-title" type="text" placeholder="add a title...">
+            <label class="todo-input-label" for="edit-todo-description">Description</label>
+            <textarea class="todo-input" id="edit-todo-description" placeholder="add a description..."></textarea>
+        </div>
+    </div>
     </div>
 </body>
 </html>
