Add darker background to active category

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
         <div class="main-container">
         <div class="categories-container">
             <div class="category">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn active-category">
                 <span class="dot dot-all"></span>
                 
                 <span class="category-title">all</span>
@@ -175,7 +175,7 @@
             </button>
             </div>
             <div class="category-option">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn active-category">
                 <span class="dot dot3"></span>
                 <span class="category-title">entertainment</span>
             </button>
