Create popup for deleting individual todos

--- a/src/template.html
+++ b/src/template.html
@@ -201,6 +201,15 @@
             <textarea class="todo-input" id="edit-todo-description" placeholder="add a description..."></textarea>
         </div>
     </div>
+    <div class="delete-todo-popup-container">
+        <div class="delete-todo-popup-box">
+            <div class="delete-todo-buttons-container">
+                <button type="button" class="delete-todo-buttons cancel-delete-todo-button">Cancel</button>
+                <button type="button" class="delete-todo-buttons delete-todo-button">Delete</button>
+            </div>
+        </div>
+
+    </div>
     </div>
 </body>
 </html>
