Add text to delete individual todo popup

--- a/src/template.html
+++ b/src/template.html
@@ -207,6 +207,9 @@
                 <button type="button" class="delete-todo-buttons cancel-delete-todo-button">Cancel</button>
                 <button type="button" class="delete-todo-buttons delete-todo-button">Delete</button>
             </div>
+            <div class="delete-todo-text">
+                <h2>Are You Sure?</h2>
+            </div>
         </div>
 
     </div>
