--- a/src/template.html
+++ b/src/template.html
@@ -208,7 +208,7 @@
                 <button type="button" class="delete-todo-buttons delete-todo-button">Delete</button>
             </div>
             <div class="delete-todo-text">
-                <h2>Are You Sure?</h2>
+                <h2>Are You Sure You Want To Delete Todo?</h2>
             </div>
         </div>
 
