--- a/src/template.html
+++ b/src/template.html
@@ -53,7 +53,7 @@
                 </button>
             </div>
             <div class="option">
-                <button type="button" class="options-btn">
+                <button type="button" class="options-btn delete-all-done-todos-btn">
                     <svg class="options-svg"  xmlns="http://www.w3.org/2000/svg"><path class="options-svg"  d="M19 24h-14c-1.104 0-2-.896-2-2v-16h18v16c0 1.104-.896 2-2 2m-9-14c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6 0c0-.552-.448-1-1-1s-1 .448-1 1v9c0 .552.448 1 1 1s1-.448 1-1v-9zm6-5h-20v-2h6v-1.5c0-.827.673-1.5 1.5-1.5h5c.825 0 1.5.671 1.5 1.5v1.5h6v2zm-12-2h4v-1h-4v1z"/></svg>
                     <span class="options-title">Delete Done</span>
                 </button>
@@ -211,6 +211,20 @@
                 <h2>Are You Sure You Want To Delete Todo?</h2>
             </div>
         </div>
+        
+
+    </div>
+    <div class="delete-all-todo-popup-container">
+        <div class="delete-all-todo-popup-box">
+            <div class="delete-all-todo-buttons-container">
+                <button type="button" class="delete-all-todo-buttons cancel-delete-all-todo-button">Cancel</button>
+                <button type="button" class="delete-all-todo-buttons delete-all-todo-button">Delete</button>
+            </div>
+            <div class="delete-all-todo-text">
+                <h2>Are You Sure You Want To Delete All Done Todos?</h2>
+            </div>
+        </div>
+        
 
     </div>
     </div>
