Fix all linting errors within file

--- a/src/template.html
+++ b/src/template.html
@@ -160,7 +160,7 @@
             <input class="todo-input" id="add-todo-title" type="text" placeholder="add a title...">
             <label class="todo-input-label" for="add-todo-description">Description</label>
             <textarea class="todo-input" id="add-todo-description" placeholder="add a description..."></textarea>
-            <label class="todo-input-label" for="add-todo-category">Category</label>
+            <label class="todo-input-label">Category</label>
             <div class="add-todo-categories">
             <div class="category-option">
                 <button type="button" class="category-btn">
