Complete styling for add category popup

--- a/src/template.html
+++ b/src/template.html
@@ -257,6 +257,16 @@
             </div>
         </div>
     </div>
+    <div class="add-category-popup-container">
+        <div class="add-category-popup-box">
+            <div class="add-category-buttons-container">
+                <button type="button" class="add-category-buttons cancel-add-category-button">Cancel</button>
+                <button type="button" class="add-category-buttons add-add-category-button">Add</button>
+            </div>
+            <label class="todo-input-label" for="add-category-title">Title</label>
+            <input class="todo-input" id="add-category-title" type="text" placeholder="add a title...">
+        </div>
+    </div>
 </div>
 </body>
 </html>
