Change placeholder text of add category form

--- a/src/template.html
+++ b/src/template.html
@@ -264,7 +264,7 @@
                 <button type="button" class="add-category-buttons add-add-category-button">Add</button>
             </div>
             <label class="todo-input-label" for="add-category-title">Title</label>
-            <input class="todo-input" id="add-category-title" type="text" placeholder="add a title...">
+            <input class="todo-input" id="add-category-title" type="text" placeholder="add a category...">
         </div>
     </div>
 </div>
