Add border bottom to each category in edit categories form, reduce width of form

--- a/src/template.html
+++ b/src/template.html
@@ -232,28 +232,28 @@
             </div>
             <h2 class="edit-categories-title">Catagories</h2>
             <div class="edit-category">
-                <button type="button" class="category-btn">
+                <div class="edit-category-container">
                 <span class="dot dot1"></span>
                 <span class="category-title">work</span>
-            </button>
+            </div>
             </div>
             <div class="edit-category">
-                <button type="button" class="category-btn">
+                <div class="edit-category-container">
                 <span class="dot dot2"></span>
                 <span class="category-title">study</span>
-            </button>
+            </div>
             </div>
             <div class="edit-category">
-                <button type="button" class="category-btn">
+                <div class="edit-category-container">
                 <span class="dot dot3"></span>
                 <span class="category-title">entertainment</span>
-            </button>
+            </div>
             </div>
             <div class="edit-category">
-                <button type="button" class="category-btn">
+                <div class="edit-category-container">
                     <span class="dot dot4"></span>
                     <span class="category-title">family</span>
-                </button>
+            </div>
             </div>
         </div>
     </div>
