Add popup for delete category

--- a/src/template.html
+++ b/src/template.html
@@ -269,6 +269,17 @@
             </div>
         </div>
     </div>
+    <div class="delete-category-popup-container">
+        <div class="delete-category-popup-box">
+            <div class="delete-category-buttons-container">
+                <button type="button" class="delete-category-buttons cancel-delete-category-button">Cancel</button>
+                <button type="button" class="delete-category-buttons delete-category-button">Delete</button>
+            </div>
+            <div class="delete-category-text">
+                <h2>Are You Sure You Want To Delete Category?</h2>
+            </div>
+        </div>
+    </div>
     <div class="add-category-popup-container">
         <div class="add-category-popup-box">
             <div class="add-category-buttons-container">
