Reinstall flickity using cdn to increase load speed

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <title>todo</title>
 </head>
 <body>
@@ -288,5 +289,6 @@
         </div>
     </div>
 </div>
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 </html>
