--- a/src/template.html
+++ b/src/template.html
@@ -17,32 +17,32 @@
             <div class="categories-side-container">
         <div class="categories-container">
             <div class="category">
-                <button type="button" class="category-btn active-category">
+                <button type="button" class="category-btn category-btn-sort active-category">
                 <span class="dot dot-all"></span>
                 
                 <span class="category-title">all</span>
             </button>
             </div>
             <div class="category">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-sort">
                 <span class="dot dot1"></span>
                 <span class="category-title">work</span>
             </button>
             </div>
             <div class="category">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-sort">
                 <span class="dot dot2"></span>
                 <span class="category-title">study</span>
             </button>
             </div>
             <div class="category">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-sort">
                 <span class="dot dot3"></span>
                 <span class="category-title">entertainment</span>
             </button>
             </div>
             <div class="category">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-sort">
                     <span class="dot dot4"></span>
                     <span class="category-title">family</span>
                 </button>
