--- a/src/template.html
+++ b/src/template.html
@@ -65,7 +65,7 @@
         </div>
         </div>
         <div class="todos-container">
-            <div class="todo">
+            <div class="todo work">
                 <div class="todo-content">
                     <div class="todo-heading">
                         <h3 class="todo-title">Titlehtrhr</h3>
@@ -91,7 +91,7 @@
                     <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
                 </div>
             </div>
-            <div class="todo">
+            <div class="todo entertainment">
                 <div class="todo-content">
                     <div class="todo-heading">
                         <h3 class="todo-title">Lorem ipsum dolor s</h3>
@@ -118,7 +118,59 @@
                     <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
                 </div>
             </div>
-            <div class="todo">
+            <div class="todo work">
+                <div class="todo-content">
+                    <div class="todo-heading">
+                        <h3 class="todo-title">Titlehtrhr</h3>
+                        <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
+                    <div class="todo-description">
+                        <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    </div>
+                    <div class="todo-footer">
+                        <span class="dot dot1"></span>
+                        <label class="control control-checkbox">
+                            done
+                            <input type="checkbox"/>
+                        <span class="control_indicator"></span>
+                    </label>
+                        
+                    </div>
+
+                </div>
+                <div class="todo-options">
+                    <button type="button" class="todo-options-btn todo-edit-btn">Edit...</button>
+                    <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
+                </div>
+            </div>
+            <div class="todo work">
+                <div class="todo-content">
+                    <div class="todo-heading">
+                        <h3 class="todo-title">Titlehtrhr</h3>
+                        <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
+                    <div class="todo-description">
+                        <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    </div>
+                    <div class="todo-footer">
+                        <span class="dot dot1"></span>
+                        <label class="control control-checkbox">
+                            done
+                            <input type="checkbox"/>
+                        <span class="control_indicator"></span>
+                    </label>
+                        
+                    </div>
+
+                </div>
+                <div class="todo-options">
+                    <button type="button" class="todo-options-btn todo-edit-btn">Edit...</button>
+                    <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
+                </div>
+            </div>
+            <div class="todo entertainment">
                 <div class="todo-content">
                     <div class="todo-heading">
                         <h3 class="todo-title">Lorem ipsum dolor s</h3>
