Remove active class and add category-btn-add class to each category btn in add todo form

--- a/src/template.html
+++ b/src/template.html
@@ -213,25 +213,25 @@
             <label class="todo-input-label">Category</label>
             <div class="add-todo-categories">
             <div class="category-option">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-add">
                 <span class="dot dot1"></span>
                 <span class="category-title">work</span>
             </button>
             </div>
             <div class="category-option">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-add">
                 <span class="dot dot2"></span>
                 <span class="category-title">study</span>
             </button>
             </div>
             <div class="category-option">
-                <button type="button" class="category-btn active-category">
+                <button type="button" class="category-btn category-btn-add">
                 <span class="dot dot3"></span>
                 <span class="category-title">entertainment</span>
             </button>
             </div>
             <div class="category-option">
-                <button type="button" class="category-btn">
+                <button type="button" class="category-btn category-btn-add">
                     <span class="dot dot4"></span>
                     <span class="category-title">family</span>
                 </button>
