Add show categories button that scrolls to top of page when clicked

--- a/src/template.html
+++ b/src/template.html
@@ -62,6 +62,12 @@
                     <span class="options-title">Delete Done</span>
                 </button>
             </div>
+            <div class="option show-categories-btn-container">
+                <button type="button" class="options-btn show-categories-btn">
+                    <svg class="options-svg"  xmlns="http://www.w3.org/2000/svg"><path class="options-svg" d="M17 22v2h-10v-2h10zm0-4h-10v2h10v-2zm-10-7v5h10v-5h6l-11-11-11 11h6z"/></svg>
+                    <span class="options-title">Show Categories</span>
+                </button>
+            </div>
         </div>
         </div>
         <div class="todos-container">
