Organise all javascript code into functions

--- a/src/template.html
+++ b/src/template.html
@@ -97,6 +97,32 @@
                     <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
                 </div>
             </div>
+            <div class="todo family">
+                <div class="todo-content">
+                    <div class="todo-heading">
+                        <h3 class="todo-title">Titlehtrhr</h3>
+                        <button class="todo-menu-btn" type="button"><svg class="todo-meatball" xmlns="http://www.w3.org/2000/svg" ><path d="M6 12c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3zm9 0c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"/></svg></button>
+                    </div>
+                    <div class="todo-description">
+                        <p class="todo-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                    </div>
+                    <div class="todo-footer">
+                        <span class="dot dot4"></span>
+                        <label class="control control-checkbox">
+                            done
+                            <input class="done-checkbox" type="checkbox"/>
+                        <span class="control_indicator"></span>
+                    </label>
+                        
+                    </div>
+
+                </div>
+                <div class="todo-options">
+                    <button type="button" class="todo-options-btn todo-edit-btn">Edit...</button>
+                    <button type="button" class="todo-options-btn todo-delete-btn">Delete</button>
+                </div>
+            </div>
             <div class="todo entertainment">
                 <div class="todo-content">
                     <div class="todo-heading">
@@ -249,9 +275,9 @@
                 <button type="button" class="edit-existing-todo-buttons add-edit-existing-todo-button">Edit</button>
             </div>
             <label class="todo-input-label" for="edit-todo-title">Title</label>
-            <input class="todo-input" id="edit-todo-title" type="text" placeholder="add a title...">
+            <input class="todo-input" id="edit-todo-title" type="text" placeholder="edit title...">
             <label class="todo-input-label" for="edit-todo-description">Description</label>
-            <textarea class="todo-input" id="edit-todo-description" placeholder="add a description..."></textarea>
+            <textarea class="todo-input" id="edit-todo-description" placeholder="edit description..."></textarea>
         </div>
     </div>
     <div class="delete-todo-popup-container">
