Create display categories functionality

--- a/src/template.html
+++ b/src/template.html
@@ -310,41 +310,43 @@
                 <button type="button" class="edit-categories-buttons add-category-button">Add</button>
             </div>
             <h2 class="edit-categories-title">Catagories</h2>
-            <div class="edit-category">
-                <div class="edit-category-container">
-                <span class="dot dot1"></span>
-                <span class="category-title">work</span>
-            </div>
-            <button type="button" class="delete-category-btn">
-                <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            </button>
-            </div>
-            <div class="edit-category">
-                <div class="edit-category-container">
-                <span class="dot dot2"></span>
-                <span class="category-title">study</span>
-            </div>
-            <button type="button" class="delete-category-btn">
-                <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            </button>
-            </div>
-            <div class="edit-category">
-                <div class="edit-category-container">
-                <span class="dot dot3"></span>
-                <span class="category-title">entertainment</span>
-            </div>
-            <button type="button" class="delete-category-btn">
-                <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            </button>
-            </div>
-            <div class="edit-category">
-                <div class="edit-category-container">
-                    <span class="dot dot4"></span>
-                    <span class="category-title">family</span>
-            </div>
-            <button type="button" class="delete-category-btn">
-                <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-            </button>
+            <div class="edit-categories-btns-container">
+                <div class="edit-category">
+                    <div class="edit-category-container">
+                    <span class="dot dot1"></span>
+                    <span class="category-title">work</span>
+                </div>
+                <button type="button" class="delete-category-btn">
+                    <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
+                </button>
+                </div>
+                <div class="edit-category">
+                    <div class="edit-category-container">
+                    <span class="dot dot2"></span>
+                    <span class="category-title">study</span>
+                </div>
+                <button type="button" class="delete-category-btn">
+                    <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
+                </button>
+                </div>
+                <div class="edit-category">
+                    <div class="edit-category-container">
+                    <span class="dot dot3"></span>
+                    <span class="category-title">entertainment</span>
+                </div>
+                <button type="button" class="delete-category-btn">
+                    <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
+                </button>
+                </div>
+                <div class="edit-category">
+                    <div class="edit-category-container">
+                        <span class="dot dot4"></span>
+                        <span class="category-title">family</span>
+                </div>
+                <button type="button" class="delete-category-btn">
+                    <svg class="delete-category-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
+                </button>
+                </div>
             </div>
         </div>
     </div>
