--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,9 @@
     <title>todo</title>
 </head>
 <body>
+    <div class="loading-container">
+        <h2 class="loading-screen-text focus-in-contract">todo</h2>
+    </div>
     <div class="app-container">
         <div class="navbar">
             <h2 class="nav-logo">todo</h2>
