--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,16 @@
     <div class="loading-container">
         <h2 class="loading-screen-text focus-in-contract">todo</h2>
     </div>
+    <div class="start-screen-container">
+        <div class="start-screen-content">
+            <h2 class="start-screen-title"><span class="blue">t</span><span class="red">o</span><span
+                    class="green">d</span><span class="purple">o</span></h2>
+            <p class="start-screen-text">This app saves your todos inside of local storage. It is not recomended that
+                you enter any sensitive information inside of this app.</p>
+            <button class="start-screen-btn" type="button">Get Started</button>
+        </div>
+
+    </div>
     <div class="app-container">
         <div class="navbar">
             <h2 class="nav-logo">todo</h2>
