Update warning message on start screen

--- a/src/template.html
+++ b/src/template.html
@@ -17,8 +17,8 @@
         <div class="start-screen-content">
             <h2 class="start-screen-title"><span class="blue">t</span><span class="red">o</span><span
                     class="green">d</span><span class="purple">o</span></h2>
-            <p class="start-screen-text">This app saves your todos inside of local storage. It is not recomended that
-                you enter any sensitive information inside of this app.</p>
+            <p class="start-screen-text">This app saves your todos inside of local storage. Do not enter any sensitive
+                information inside of this app.</p>
             <button class="start-screen-btn" type="button">Get Started</button>
         </div>
 
