Complete styling for flash error box

--- a/src/template.html
+++ b/src/template.html
@@ -160,6 +160,16 @@
             </div>
         </div>
     </div>
+    <div class="flash-error-popup-container">
+        <div class="flash-error-popup-box">
+            <div class="flash-error-text">
+                <h2>Error Message.</h2>
+            </div>
+            <div class="flash-error-buttons-container">
+                <button type="button" class="flash-error-buttons flash-error-button">OK</button>
+            </div>
+        </div>
+    </div>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 </body>
