Create flashError method & closeFlashError method

--- a/src/template.html
+++ b/src/template.html
@@ -163,7 +163,7 @@
     <div class="flash-error-popup-container">
         <div class="flash-error-popup-box">
             <div class="flash-error-text">
-                <h2>Error Message.</h2>
+                <h2 class="flash-error-message">Error Message.</h2>
             </div>
             <div class="flash-error-buttons-container">
                 <button type="button" class="flash-error-buttons flash-error-button">OK</button>
