Change close edit categories button to say Close instead of Cancel

--- a/src/template.html
+++ b/src/template.html
@@ -129,7 +129,7 @@
         <div class="edit-categories-container">
             <div class="edit-categories-box">
                 <div class="edit-categories-buttons-container">
-                    <button type="button" class="edit-categories-buttons cancel-edit-categories-button">Cancel</button>
+                    <button type="button" class="edit-categories-buttons cancel-edit-categories-button">Close</button>
                     <button type="button" class="edit-categories-buttons add-category-button">Add</button>
                 </div>
                 <h2 class="edit-categories-title">Catagories</h2>
