Complete styling for categories slider

--- a/src/template.html
+++ b/src/template.html
@@ -42,6 +42,16 @@
                 <div class="categories-container">
 
                 </div>
+                <div class="prev-next-btns-container">
+                    <button class="prev-btn prev-next-btns" type="button"><svg class="prev-next-svg"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />
+                        </svg></button>
+                    <button class="next-btn prev-next-btns" type="button"><svg class="prev-next-svg"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />
+                        </svg></button>
+                </div>
                 <div class="options">
                     <div class="option">
                         <button type="button" class="options-btn edit-categories-btn">
